<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.personalmorningalarm.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.personalmorningalarm.ui.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.personalmorningalarm.ui.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_nfcTags"
            app:destination="@id/nfcTagsFragment" />
        <action
            android:id="@+id/action_settings_to_quotes"
            app:destination="@id/quoteManagementFragment" />
    </fragment>

    <fragment
        android:id="@+id/nfcTagsFragment"
        android:name="com.personalmorningalarm.ui.NfcTagsFragment"
        android:label="@string/nfc_tags_screen_title"
        tools:layout="@layout/fragment_nfc_tags" />

    <fragment
        android:id="@+id/quoteManagementFragment"
        android:name="com.personalmorningalarm.ui.QuoteManagementFragment"
        android:label="@string/quote_management_title"
        tools:layout="@layout/fragment_quote_management" />

</navigation>
