<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_stop_nuclear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_nuclear_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nuclear_title"
            android:textAppearance="?attr/textAppearanceHeadlineLarge"
            android:textColor="#FFFF1744"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_nuclear_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/nuclear_subtitle"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <!-- TODO(temporary): abort control until the nuclear challenge gauntlet exists. -->
    <Button
        android:id="@+id/btn_stop_nuclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_nuclear_temp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>
